# projecto-final-coderaiders

./: README.md
pong_ai/: CMakeLists.txt  main.cpp
pong_ai/docs/: BIBLIOGRAFIA  README
pong_ai/include/utec/agent/: EnvGym.h  PongAgent.h
pong_ai/include/utec/algebra/: Tensor.h
pong_ai/include/utec/nn/: activation.h  dense.h  layer.h  loss.h  neural_network.h
pong_ai/src/utec/agent/: EnvGym.cpp  PongAgent.cpp
pong_ai/tests/: test_agent_env.cpp  test_neural_network.cpp  test_tensor.cpp
